--- a/rothman-1982-updated/rothman.tex
+++ b/rothman-1982-updated/rothman.tex
@@ -1,7 +1,14 @@
 \documentclass[12pt]{article}
 \usepackage[full]{textcomp}
 \usepackage[sups,osf]{garamondx} % osf (or tosf) for text, not math
-     
+%\usepackage[sups,osf,p]{fbb} % osf (or tosf) for text, not math
+%\usepackage[osf,sups]{Baskervaldx}
+%\usepackage[sb,osf,p]{libertine}
+%\usepackage[sc,osf]{mathpazo}
+
+\usepackage[perpage]{footmisc}
+\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+
 \usepackage[colorlinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -32,9 +39,6 @@ bookmarksopenlevel=10
  
 \titleformat*{\subsection}{\itshape}
 \titleformat*{\subsubsection}{\itshape}
-
-\long\def\symbolfootnote[#1]#2{\begingroup%
-\def\thefootnote{\fnsymbol{footnote}}\footnote[#1]{#2}\endgroup}
 
 \begin{document}
 
@@ -81,7 +85,7 @@ Evariste Galois was born on October 25, 1811, not far from Paris in the town of 
 
 In 1815, during The One Hundred Days, M. Galois was elected mayor of Bourg-la-Reine. He had been a supporter of Napoleon and, in fact, had been elected chief of the town's liberal party during Napoleon's first exile. After Waterloo, he had planned to relinquish his post to his predecessor, but the latter had left the country. Galois demanded to be either confirmed or replaced, and in the confusion managed to keep his office. He served the new King faithfully, but from his point on he met increasing resistance from the conservative elements of his town. It is probably safe to say that the younger Galois inherited his liberal ideas from his parents.
 
-On October 6, 1823, Evariste was enrolled in the Lycee of Louis-le Grand, a famous preparatory school (which still exists) in Paris.\symbolfootnote[1]{Note: At the time the school was called the College de Louis-le-Grand.} Both Robespierre and Victor Hugo had studied there. Louis-le-Grand is where Evariste's troubles began, where Infeld's account of his life essentially opens and where Bell introduces his theme of ``Genius and Stupidity,'' taking on the tone of a blanket condemnation of almost everyone and everything that surrounded Galois. ``Galois was no `ineffectual angel,' '' Bell writes in his introduction, ``but even his magnificent powers were shattered before the massed stupidity aligned against him, and he beat out his life fighting one unconquerable fool after another \cite{14}.'' I believe we will see the problems ran much deeper than that.
+On October 6, 1823, Evariste was enrolled in the Lycee of Louis-le Grand, a famous preparatory school (which still exists) in Paris.\footnote{Note: At the time the school was called the College de Louis-le-Grand.} Both Robespierre and Victor Hugo had studied there. Louis-le-Grand is where Evariste's troubles began, where Infeld's account of his life essentially opens and where Bell introduces his theme of ``Genius and Stupidity,'' taking on the tone of a blanket condemnation of almost everyone and everything that surrounded Galois. ``Galois was no `ineffectual angel,' '' Bell writes in his introduction, ``but even his magnificent powers were shattered before the massed stupidity aligned against him, and he beat out his life fighting one unconquerable fool after another \cite{14}.'' I believe we will see the problems ran much deeper than that.
 
 Bell's first liberties with Dupuy are minor. Bell describes Louis-le-Grand as a ``dismal horror'' and goes on to say ``the place looked like a prison and was \cite{15}.'' Admittedly, Dupuy writes that Louis-le-Grand happened to look like a jail because of its grills, but he then goes on to describe the underlying ``passions of work, academic triumph, passions of liberal ideals, passions of memories of the Revolution and Empire, contempt and hate for the legitimist reaction \cite{16}.'' Bell, by cutting Dupuy's sentence in half, has begun the slant to the negative.
 
@@ -89,7 +93,7 @@ At this particular time, there were undeniable problems. During Galois's first t
 
 Nevertheless, Galois's first two years at Louis-le-Grand were marked by a number of successes. He received the first prize for Latin verse and three honorable mentions, as well as a mention in Greek for the General Concourse. At this point we witness the first of Bell's distortions of chronology to give the impression that Galois was misunderstood and persecuted. Galois was asked to repeat his third year because of his poor work in rhetoric Bell writes, ``His mathematical genius was already stirring,'' and ``He was forced to lick up the stale leavings which his genius had rejected \cite{17}.'' I cannot say with any certainty whether Galois's mathematical genius was already stirring, but it is known that Evariste did not enroll in his first mathematics course until after he had been demoted.
 
-During his mathematics course, which he began in February 1827, Galois discovered Legendre's text on geometry, soon followed by Lagrange's original memoirs: \emph{Resolution of Numerical Equations\symbolfootnote[1]{Here and elsewhere, read ``algebraic equations'' for ``numerical equations.''}: Theory of Analytic Functions and Lessons on the Calculus of Functions.} Doubtlessly, Galois received his initial ideas on the theory of equations from Lagrange. I do not understand why Bell claims Galois's classwork was mediocre; his instructor M. Vernier constantly writes such accolades as ``zeal and success,'' ``zeal and progress very marked \cite{18}.''
+During his mathematics course, which he began in February 1827, Galois discovered Legendre's text on geometry, soon followed by Lagrange's original memoirs: \emph{Resolution of Numerical Equations\footnote{Here and elsewhere, read ``algebraic equations'' for ``numerical equations.''}: Theory of Analytic Functions and Lessons on the Calculus of Functions.} Doubtlessly, Galois received his initial ideas on the theory of equations from Lagrange. I do not understand why Bell claims Galois's classwork was mediocre; his instructor M. Vernier constantly writes such accolades as ``zeal and success,'' ``zeal and progress very marked \cite{18}.''
 
 With his discovery of mathematics, Galois became absorbed and neglected his other courses. Before rolling in M. Vernier's class, typical comments about him had been:
 
@@ -123,13 +127,13 @@ This paper was a minor aside. Galois had also been working on the theory of equa
 
 We now encounter a major myth which evidently had its origins in the very first writings on Galois and which had been perpetuated by virtually all writers since. This myth is the assertion that Cauchy either forgot or lost the papers (Dupuy, Bell \cite{21}) or intentionally threw them out (Infeld \cite{22}). Recently, however, Rene Taton has discovered a letter of Cauchy in the Academy archives which conclusively proves that he did not lose Galois's memoirs but had planned to present them to the Academy in January 1830 \cite{23}. There is even some evidence that Cauchy encouraged Galois. I will discuss this letter and related events in more detail below; for now I note only that to hold Cauchy responsible for ``one of the major disasters in the history of mathematics,'' to paraphrase Bell \cite{24},is simply incorrect, and to add neglect by the Academy to the list of Galois's difficulties during this period appears entirely unwarranted.
 
-A truly tragic blow came within a month of the submission: on the second of July, 1829, Evariste's father committed suicide. The reactionary priest of Bourg-la-Reine had signed Mayor Galois's name to a number of maliciously forged epigrams directed at Galois's own relatives. A scandal erupted. M. Galois's good nature could not stand such an attack and he asphixiated himself in his Paris apartment ``not two steps from Louis-le-Grand.'' During the funeral, when the same clergyman attempted to participate, a small riot erupted. The loss of his father may explain much of Galois's future behavior. We must wait a few years, until Evariste's second prison term, to see this. In any case, he loved his father dearly, and if an iron link had not already been forged between the Bourbon government and the Jesuits, it had now.\symbolfootnote[1]{Probably the clearest picture of the relationship between the Jesuits and the Bourbons, one which contains episodes paralelling that of M. Galois's misfortunes, is Stendhal's famous novel \emph{The Red} and \emph{The Black.}}
+A truly tragic blow came within a month of the submission: on the second of July, 1829, Evariste's father committed suicide. The reactionary priest of Bourg-la-Reine had signed Mayor Galois's name to a number of maliciously forged epigrams directed at Galois's own relatives. A scandal erupted. M. Galois's good nature could not stand such an attack and he asphixiated himself in his Paris apartment ``not two steps from Louis-le-Grand.'' During the funeral, when the same clergyman attempted to participate, a small riot erupted. The loss of his father may explain much of Galois's future behavior. We must wait a few years, until Evariste's second prison term, to see this. In any case, he loved his father dearly, and if an iron link had not already been forged between the Bourbon government and the Jesuits, it had now.\footnote{Probably the clearest picture of the relationship between the Jesuits and the Bourbons, one which contains episodes paralelling that of M. Galois's misfortunes, is Stendhal's famous novel \emph{The Red} and \emph{The Black.}}
 
 But Galois's troubles were not yet over. A few days later, he failed his examination to l'Ecole Polytechnique for the second and final time. Legend has it that Galois, who worked almost entirely in his head and who was poor at presenting his ideas verbally, became so enraged at the stupidity of his examiner that he hurled an eraser at him. Bell records this as a fact \cite{25} but according to the little-known study of Joseph Bertrand \cite{26} the tradition is false. Bertrand, who appears to have detailed information about the event, records that Galois, while expounding on the properties of logarithmic series, refused to prove his statements to the examiner M. Dinet and, in response to Dinet's questions, replied merely that the answer was completely obvious. So was the result.
 
 The examination failures, as well as the misunderstanding of his humanities teachers, left Galois irrevocably embittered. Bell quotes him as writing, ``Genius is condemned by a malicious social organization to an eternal denial of justice in favor of fawning mediocrity \cite{27}.'' I believe Bell constructed this quotation from a passage of Dupuy's \cite{28} but Galois did express similar sentiments in his fragmentary essay ``Sciences, Hierarchie: Ecoles'' and in ``Sur l'Enseignment des Sciences'' (``Hierarchy is a means for the inferior \cite{29}.''). In Bell's diatribe against this famous examination, as well as in other accounts of it, the suggestion that the death of Galois's father several days before may have had something to do with the outcome never arises. It is a simple matter for Bell to lay the fault squarely with the examiner's stupidity because Bell has placed the examination before M. Galois's unfortunate suicide. In this instance, Bell is not fully to blame; Dupuy does not date the examination \cite{30}. I do not wish to suggest Galois should have been failed. I only wish to point out that the examination must have been held under the worst possible conditions.
 
-Thus, Galois's secondary school career ended in a string of minor setbacks and two major disasters. Evariste had not planned to take the Baccalaureate examinations, because the Ecole Polytechnique did not require them. Now, having failed the Polytechnique's entrance examination and having decided to enter the less prestigious Ecole Normale\symbolfootnote[1]{Then called the l'Ecole Preparatoire. The faculty of the Polytechnique before 1830 included, among others, Lagrange, Laplace, Fourier, Ampere, Cauchy, Coriolis, Poisson and Gay-Lussac. It is not surprising that young scientists wished to enroll.}, he was forced to reconsider. ``Still persecuted and maliciously misunderstood by his preceptors,'' in Bell's words, ``Galois prepared himself for the final examinations \cite{31}.'' Despite such malice, Galois did very well in mathematics and physics, though less well in literature. He received both a Bachelor of Letters and a Bachelor of Science on the twenty-ninth of December, 1829.
+Thus, Galois's secondary school career ended in a string of minor setbacks and two major disasters. Evariste had not planned to take the Baccalaureate examinations, because the Ecole Polytechnique did not require them. Now, having failed the Polytechnique's entrance examination and having decided to enter the less prestigious Ecole Normale\footnote{Then called the l'Ecole Preparatoire. The faculty of the Polytechnique before 1830 included, among others, Lagrange, Laplace, Fourier, Ampere, Cauchy, Coriolis, Poisson and Gay-Lussac. It is not surprising that young scientists wished to enroll.}, he was forced to reconsider. ``Still persecuted and maliciously misunderstood by his preceptors,'' in Bell's words, ``Galois prepared himself for the final examinations \cite{31}.'' Despite such malice, Galois did very well in mathematics and physics, though less well in literature. He received both a Bachelor of Letters and a Bachelor of Science on the twenty-ninth of December, 1829.
 
 It is interesting to note that, although he has continued to play the role of muckraker of malice, Bell fails to mention M. Richard's distinct cooling toward Galois, on whom he had previously bestowed high encomia. After the first trimester of the 1828-1829 academic year, Richard wrote: ``The student is markedly superior to all his classmates.'' After the second: ``This student works only in the highest realms of mathematics.'' After the third: ``Conduct good, work satisfactory.''
 
@@ -145,7 +149,7 @@ I was supposed to present today to the Academy first a report on the work of the
 This letter makes it clear that, six months after their receipt, Cauchy was still in possession of Galois's manuscripts, had read them and was very likely aware of their importance. At the following session on 25 January, however, Cauchy, while presenting his own memoir, did not present Galois's work. Taton hypothesizes that between January 18 and January 25, Cauchy persuaded Galois to combine his researches into a single memoir to be submitted for the Grand Prize in Mathematics, for which the deadline was March 1. Whether or not Cauchy actually made the suggestion cannot yet be proved, but in February Galois did submit such an entry to Fourier in his capacity of perpetual secretary of mathematics and physics for the Academy. In any event, there is an additional piece of evidence which attests to Cauchy's appreciation of Galois's work. This is an article which appeared the following year on 15 June 1831 in the Saint-Simonian journal {\em Le Globe.} The occasion was an appeal for Galois's acquittal after his arrest following the celebrated banquet at the \emph{Vendanges des Bourgogne}:
 
 \begin{quote}
-Last year before March 1, M. Galois gave to the secretary of the Institute a memoir on the solution of numerical equations. This memoir should have been entered in the competition for the Grand Prize in Mathematics. It deserved the prize, for it could resolve some difficulties that Lagrange had failed to do. \emph{M. Cauchy had conferred the highest praise on the author about this subject.} And what happened? The memoir is lost and the prize is given without the participation of the young savant. [Taton's Italics]\symbolfootnote[1]{Note: My own interpretation of this article is slightly different than that of Taton. Taton writes that the journalist evidently had first-hand information. But note the date: 15 June 1831. In the aftermath of the July revolution, Cauchy fled France in september, almost nine months prior to the article's publication. It is difficult to see when the journalist would have spoken to Cauchy. However, the article appeared in a Saint-Simonian journal. Galois's best friend, Auguste Chevalier, was one of the most active Saint-Simonians. My own suspicion, which I cannot prove, is that the journalist was Chevalier and the information was coming directly from Galois. If this hypothesis is correct, Galois himself is admitting Cauchy's encouragement.}
+Last year before March 1, M. Galois gave to the secretary of the Institute a memoir on the solution of numerical equations. This memoir should have been entered in the competition for the Grand Prize in Mathematics. It deserved the prize, for it could resolve some difficulties that Lagrange had failed to do. \emph{M. Cauchy had conferred the highest praise on the author about this subject.} And what happened? The memoir is lost and the prize is given without the participation of the young savant. [Taton's Italics]\footnote{Note: My own interpretation of this article is slightly different than that of Taton. Taton writes that the journalist evidently had first-hand information. But note the date: 15 June 1831. In the aftermath of the July revolution, Cauchy fled France in september, almost nine months prior to the article's publication. It is difficult to see when the journalist would have spoken to Cauchy. However, the article appeared in a Saint-Simonian journal. Galois's best friend, Auguste Chevalier, was one of the most active Saint-Simonians. My own suspicion, which I cannot prove, is that the journalist was Chevalier and the information was coming directly from Galois. If this hypothesis is correct, Galois himself is admitting Cauchy's encouragement.}
 \end{quote}
 
 The misfortune referred to above was the death of Fourier on May 16, 1830. Galois's entry could not be found among Fourier's papers and in Galois's eyes this could not be an accident. ``The loss of my memoir is a very simple matter,'' he wrote. ``It was with M. Fourier, who was supposed to have read it and, at the death of this savant, the memoir was lost \cite{34}.'' It was an unfortunate coincidence; however, it was not Fourier's sole responsibility to read the manuscript, for the committee appointed to judge the Grand Prize consisted also of Lacroix, Poisson, Lengendre and Poinsot \cite{35}. I mention this because a number of sources give the impression that somehow Fourier either intentionally ``lost'' the paper or could not understand it \cite{36}. In spite of the setback caused by this loss of his manuscipt, April saw the publication of Galois's paper ``An analysis of a Memoir on the Algebraic Resolution of Equations'' in the \emph{Bulletin de Ferussac.} In June he published ``Notes on the Resolution of Numerical Equations'' and the important article ``On the Theory of Numbers.'' \cite{37}
@@ -206,7 +210,7 @@ Dumas himself describes this event at length in his memoirs. Here is a portion:
 \begin{quotation}
 Suddenly, in the midst of a private conversation which I was carrying on with the person on my left, the name Louis-Philippe, followed by five or six whistles, caught my ear. I turned around. One of the most animated scenes was taking place fifteen or twenty seats from me.
 
-A young man who had raised his glass and held an open dagger\symbolfootnote[1]{Literally, poignard} in the same hand was trying to make himself heard. He was Evariste Galois, since killed by Pescheux d'Herbinville, a charming young man who made silk-paper cartridges which he would tie up with silk ribbons.\symbolfootnote[2]{This is a literal translation of Dumas. We have not been able to discover exactly to what this occupation refers but it is a plausible guess that d'Herbinville made what the British call ``crackers'' (French, diablotins), party favors that pop when the ribbons are pulled and contain inspirational messages. They seem to have been invented at about this time.}
+A young man who had raised his glass and held an open dagger\footnote{Literally, poignard} in the same hand was trying to make himself heard. He was Evariste Galois, since killed by Pescheux d'Herbinville, a charming young man who made silk-paper cartridges which he would tie up with silk ribbons.\footnote{This is a literal translation of Dumas. We have not been able to discover exactly to what this occupation refers but it is a plausible guess that d'Herbinville made what the British call ``crackers'' (French, diablotins), party favors that pop when the ribbons are pulled and contain inspirational messages. They seem to have been invented at about this time.}
 
 Evariste Galois was scarcely 23 or 24 at the time. He was one of the most ardent republicans. The noise was such that the very reason for this noise had become incomprehensible. 
 
@@ -227,7 +231,7 @@ Evariste was arrested at his mother's house the day following the banquet, which
 
 As Dumas aptly remarks, ``One understands that with such lucidity in the questions and answers, the discussion did not last long.'' Apparently moved by Galois's youth, the jury acquitted him within moments. Dumas goes on to say, ``I repeat that this is a rude generation, perhaps a bit foolish, but you will recall Beranger's song \emph{Les Fous} [``The Fools'' or ``The Madmen''].'' \cite{55}
 
-Shortly after the event, the Academy rejected Galois's memoir on the resolution of equations, this time with Poisson as referee. The rejection was written on July 4, although according to Infeld \cite{56} Galois did not receive the letter until October, when he was in prison again.\symbolfootnote[1]{I have found no other source which either corroborates or contradicts Infeld's claim that the rejected manuscript was not received until October, three months after the actual rejection.} By this time, about eight months had passed since he had submitted the paper at Poisson's request. As we will see, Galois did not take the rejection lightly.
+Shortly after the event, the Academy rejected Galois's memoir on the resolution of equations, this time with Poisson as referee. The rejection was written on July 4, although according to Infeld \cite{56} Galois did not receive the letter until October, when he was in prison again.\footnote{I have found no other source which either corroborates or contradicts Infeld's claim that the rejected manuscript was not received until October, three months after the actual rejection.} By this time, about eight months had passed since he had submitted the paper at Poisson's request. As we will see, Galois did not take the rejection lightly.
 
 The cause for Galois's second arrest was preventative: On Bastille Day, July 14, 1831, he and his republican friend Duchatelet were apprehended dressed in Artillery Guard uniforms and heavily armed. Because the Artillery Guard had been disbanded on the last day of 1830 in fear of its becoming an instrument of the republicans, to wear the uniform was an outright gesture of defiance. It was also illegal. This was the charge brought against Galois, but not until the late date of October 23; he was sentenced to six months in prison. The sentence was confirmed by the court of appeals on December 3. In the meantime, Galois had been languishing in Sainte-Pelagie prison since his arrest in July.
 
@@ -246,7 +250,7 @@ To refuse the challenge would be an act of cowardice. And our poor Bacchus had s
 The scene repeats itself. This time Galois empties a bottle of brandy in a single draught. Galois, drunk, pours out his soul to Raspail in what is either a retrospective invention or haunting prophesy:
 
 \begin{quotation}
-How I like you, at this moment more than ever. You do not get drunk, you are serious and a friend of the poor. But what is happening to my body? I have two men inside me, and unfortunately, I can guess which is going to overcome the other. I am too impatient to get to the goal. The passions of my age are all imbued with impatience. Even virtue has that vice with us. See here! I do not like liquor. At a word i drink it, holding my nose, and get drunk. I do not like women and it seems to me that I could only love a Tarpeia or a Graccha.\symbolfootnote[1]{The \emph{Encylopedia Britannica} states that Tarpeia, according to Roman legend, was the daughter of the Roman commander in charge of defending the capital against the Sabines. She offered to betray the citadel in exchange for what the Sabines wore on their left arms, i.e., their bracelets. Taking her at her word, the Sabines crushed her beneath their shields. Graccha refers to Cornelia Graccha, the mother of Tiberius and Gaius, who is remembered as their educator as well as an accomplished author in her own right. Although hostile propaganda later suggested she encouraged her sons' more revolutionary policies, she seems rather to have restrained them.} And I tell you, I will die in a duel on the occasion of some {\it coquette de bas etage}. Why? Because she will invite me to avenge her honor which another has compromised. 
+How I like you, at this moment more than ever. You do not get drunk, you are serious and a friend of the poor. But what is happening to my body? I have two men inside me, and unfortunately, I can guess which is going to overcome the other. I am too impatient to get to the goal. The passions of my age are all imbued with impatience. Even virtue has that vice with us. See here! I do not like liquor. At a word i drink it, holding my nose, and get drunk. I do not like women and it seems to me that I could only love a Tarpeia or a Graccha.\footnote{The \emph{Encylopedia Britannica} states that Tarpeia, according to Roman legend, was the daughter of the Roman commander in charge of defending the capital against the Sabines. She offered to betray the citadel in exchange for what the Sabines wore on their left arms, i.e., their bracelets. Taking her at her word, the Sabines crushed her beneath their shields. Graccha refers to Cornelia Graccha, the mother of Tiberius and Gaius, who is remembered as their educator as well as an accomplished author in her own right. Although hostile propaganda later suggested she encouraged her sons' more revolutionary policies, she seems rather to have restrained them.} And I tell you, I will die in a duel on the occasion of some {\it coquette de bas etage}. Why? Because she will invite me to avenge her honor which another has compromised. 
 
 Do you know what I lack, my friend? I confide it only to you: it is someone whom I can love and love only in spirit. I have lost my father and no one has ever replaced him, do you hear me...? \cite{63}
 
@@ -380,10 +384,10 @@ The old general came to give his testimony in favor of the accused, almost all o
 \end{quote}
 D'Herbinville, it seems, was one of the heros of the hour. After the acquittal, the crowd pulled his coach through the streets of Paris, ``amid shouts of rapturous applause.''
 
-Bell (and Hoyle below), by not mentioning d'Herbinville at all, relieve themselves of the difficulty of explaining why Galois should be killed in a political duel with a fellow republican or why d'Herbinville should be considered a political enemy. Infeld is in a more difficult position. Having acknowledged d'Herbinville's existence, he must explain why neither Dumas nor Blanc, both republicans, nor evidently the extremely liberal Lafayette\symbolfootnote[1]{Lafayette had been considered republican enough to see his post of Commander of the National Guard dissolved after the events of December 1830.} (assuming he knew d'Herbinville personally), nor, one would gather from Blanc's account, any republican in Paris, ever held any suspicions that d'Herbinville was an agent. Infeld talks at length about the 1848 unmasking of the police spies but he does not mention the following extract from Dupuy:
+Bell (and Hoyle below), by not mentioning d'Herbinville at all, relieve themselves of the difficulty of explaining why Galois should be killed in a political duel with a fellow republican or why d'Herbinville should be considered a political enemy. Infeld is in a more difficult position. Having acknowledged d'Herbinville's existence, he must explain why neither Dumas nor Blanc, both republicans, nor evidently the extremely liberal Lafayette\footnote{Lafayette had been considered republican enough to see his post of Commander of the National Guard dissolved after the events of December 1830.} (assuming he knew d'Herbinville personally), nor, one would gather from Blanc's account, any republican in Paris, ever held any suspicions that d'Herbinville was an agent. Infeld talks at length about the 1848 unmasking of the police spies but he does not mention the following extract from Dupuy:
 
 \begin{quote}
-Pescheux was certainly not a ``false-brother'': all the men who acted as police agents during the reign of Louis-Philippe were revealed in 1848 when Caussidiere became chief of police, as witness Lucien de la Hodde.\symbolfootnote[1]{Hodde was a ``republican'' who was unmasked as a spy in 1848.} If Pescheux were suspect, he would certainly not have been nominated as curator of the palace of Fontainebleau. It is absolutely necessary to discard the idea of police intervention and a framed assassination \cite{85}.
+Pescheux was certainly not a ``false-brother'': all the men who acted as police agents during the reign of Louis-Philippe were revealed in 1848 when Caussidiere became chief of police, as witness Lucien de la Hodde.\footnote{Hodde was a ``republican'' who was unmasked as a spy in 1848.} If Pescheux were suspect, he would certainly not have been nominated as curator of the palace of Fontainebleau. It is absolutely necessary to discard the idea of police intervention and a framed assassination \cite{85}.
 \end{quote}
 We see that there are, even at this level, some serious difficulties with the political enemies scenario. Infeld gets around theses obstacles in characteristic fashion: in his bibliography he cites both Blanc and Dupuy as primary sources but {\it quotes neither.} In his afterward he goes so far as to admit, ``There is no reason to believe Pescheux d'Herbinville was a police agent.'' But then he goes on to say: ``I believe there is enough circumstantial evidence to prove that the intervention of the secret police sealed Galois's fate. I do not believe it is possible to fit all the known facts without assuming Galois was murdered \cite{86}.''
 
