--- a/1801.05798/wetering-issue-dec-2019.tex
+++ b/1801.05798/wetering-issue-dec-2019.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,onecolumn,10pt,accepted=2019-05-03, issue=1, volume=1, shorttitle=papers/compositionality-1-1]{compositionalityarticle}
+\documentclass[b5paper,onecolumn,12pt,accepted=2019-05-03, issue=1, volume=1, shorttitle=papers/compositionality-1-1]{compositionalityarticle}
 \pdfoutput=1
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
