--- a/1801.05798/wetering-issue-dec-2019.tex
+++ b/1801.05798/wetering-issue-dec-2019.tex
@@ -1184,6 +1184,8 @@ Hence the functor of Theorem~\ref{theor:OETEJA} restricts to the category of rea
 %\phantomsection
 %\addcontentsline{toc}{section}{References}
 \bibliographystyle{plainnat}
+\small
+\raggedright
 \bibliography{bibliography}
 
 
